[package]
name = "amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
winnow="0.7.9"
toml_datetime="0.6.9"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }
bytemuck = "1.23.0"
proc-macro2 = "1.0.95"